cbits/clang_wrappers_ffi.h

/* this header is autogenerated with cabal run clang-bootstrap */
/* *** Top-level *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX.html> */

/* OMITTED: CXIndex             clang_createIndexWithOptions (const CXIndexOptions * options); */

/* OMITTED: void                clang_CXIndex_setGlobalOptions (CXIndex, unsigned options); */

/* OMITTED: unsigned            clang_CXIndex_getGlobalOptions (CXIndex); */

/* OMITTED: void                clang_CXIndex_setInvocationEmissionPathOption (CXIndex, const char * Path); */

/* OMITTED: unsigned            clang_isFileMultipleIncludeGuarded (CXTranslationUnit tu, CXFile file); */

/* OMITTED: const char *        clang_getFileContents (CXTranslationUnit tu, CXFile file, size_t * size); */

static inline void wrap_getLocation(CXTranslationUnit tu, CXFile file, unsigned line, unsigned column, CXSourceLocation * result) {
  *result = clang_getLocation(tu, file, line, column);
}
/* OMITTED: CXSourceLocation    clang_getLocationForOffset (CXTranslationUnit tu, CXFile file, unsigned offset); */

/* OMITTED: CXSourceRangeList * clang_getSkippedRanges (CXTranslationUnit tu, CXFile file); */

/* OMITTED: CXSourceRangeList * clang_getAllSkippedRanges (CXTranslationUnit tu); */

/* OMITTED: CXDiagnosticSet     clang_getDiagnosticSetFromTU (CXTranslationUnit Unit); */

/* *** Diagnostic reporting *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__DIAG.html> */

/* OMITTED: CXDiagnosticSet           clang_loadDiagnostics (const char * file, enum CXLoadDiag_Error * error, CXString * errorString); */

static inline void wrap_formatDiagnostic(CXDiagnostic Diagnostic, unsigned Options, CXString * result) {
  *result = clang_formatDiagnostic(Diagnostic, Options);
}
static inline void wrap_getDiagnosticLocation(CXDiagnostic Diag, CXSourceLocation * result) {
  *result = clang_getDiagnosticLocation(Diag);
}
static inline void wrap_getDiagnosticSpelling(CXDiagnostic Diag, CXString * result) {
  *result = clang_getDiagnosticSpelling(Diag);
}
static inline void wrap_getDiagnosticOption(CXDiagnostic Diag, CXString * Disable, CXString * result) {
  *result = clang_getDiagnosticOption(Diag, Disable);
}
static inline void wrap_getDiagnosticCategoryText(CXDiagnostic Diag, CXString * result) {
  *result = clang_getDiagnosticCategoryText(Diag);
}
static inline void wrap_getDiagnosticRange(CXDiagnostic Diagnostic, unsigned Range, CXSourceRange * result) {
  *result = clang_getDiagnosticRange(Diagnostic, Range);
}
static inline void wrap_getDiagnosticFixIt(CXDiagnostic Diagnostic, unsigned FixIt, CXSourceRange * ReplacementRange, CXString * result) {
  *result = clang_getDiagnosticFixIt(Diagnostic, FixIt, ReplacementRange);
}
/* OMITTED: time_t   clang_getFileTime (CXFile SFile); */

/* OMITTED: int      clang_getFileUniqueID (CXFile file, CXFileUniqueID * outID); */

/* OMITTED: int      clang_File_isEqual (CXFile file1, CXFile file2); */

/* OMITTED: CXString clang_File_tryGetRealPathName (CXFile file); */

/* *** Physical source locations *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__LOCATIONS.html> */

/* OMITTED: CXSourceLocation clang_getNullLocation (void); */

/* OMITTED: unsigned         clang_equalLocations (CXSourceLocation loc1, CXSourceLocation loc2); */

/* OMITTED: unsigned         clang_isBeforeInTranslationUnit (CXSourceLocation loc1, CXSourceLocation loc2); */

/* OMITTED: int              clang_Location_isInSystemHeader (CXSourceLocation location); */

static inline int wrap_Location_isFromMainFile(const CXSourceLocation * location) {
  return clang_Location_isFromMainFile(*location);
}
/* OMITTED: CXSourceRange    clang_getNullRange (void); */

static inline void wrap_getRange(const CXSourceLocation * begin, const CXSourceLocation * end, CXSourceRange * result) {
  *result = clang_getRange(*begin, *end);
}
/* OMITTED: unsigned         clang_equalRanges (CXSourceRange range1, CXSourceRange range2); */

static inline int wrap_Range_isNull(const CXSourceRange * range) {
  return clang_Range_isNull(*range);
}
static inline void wrap_getExpansionLocation(const CXSourceLocation * location, CXFile * file, unsigned * line, unsigned * column, unsigned * offset) {
  return clang_getExpansionLocation(*location, file, line, column, offset);
}
static inline void wrap_getPresumedLocation(const CXSourceLocation * location, CXString * filename, unsigned * line, unsigned * column) {
  return clang_getPresumedLocation(*location, filename, line, column);
}
/* OMITTED: void             clang_getInstantiationLocation (CXSourceLocation location, CXFile * file, unsigned * line, unsigned * column, unsigned * offset); */

static inline void wrap_getSpellingLocation(const CXSourceLocation * location, CXFile * file, unsigned * line, unsigned * column, unsigned * offset) {
  return clang_getSpellingLocation(*location, file, line, column, offset);
}
static inline void wrap_getFileLocation(const CXSourceLocation * location, CXFile * file, unsigned * line, unsigned * column, unsigned * offset) {
  return clang_getFileLocation(*location, file, line, column, offset);
}
static inline void wrap_getRangeStart(const CXSourceRange * range, CXSourceLocation * result) {
  *result = clang_getRangeStart(*range);
}
static inline void wrap_getRangeEnd(const CXSourceRange * range, CXSourceLocation * result) {
  *result = clang_getRangeEnd(*range);
}
/* OMITTED: void             clang_disposeSourceRangeList (CXSourceRangeList * ranges); */

/* *** String manipulation routines *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__STRING.html> */

static inline const char * wrap_getCString(const CXString * string) {
  return clang_getCString(*string);
}
static inline void wrap_disposeString(const CXString * string) {
  return clang_disposeString(*string);
}
/* OMITTED: void         clang_disposeStringSet (CXStringSet * set); */

/* *** Translation unit manipulation *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__TRANSLATION__UNIT.html> */

/* OMITTED: CXString          clang_getTranslationUnitSpelling (CXTranslationUnit CTUnit); */

/* OMITTED: CXTranslationUnit clang_createTranslationUnitFromSourceFile (CXIndex CIdx, const char * source_filename, int num_clang_command_line_args, const char * const * clang_command_line_args, unsigned num_unsaved_files, struct CXUnsavedFile * unsaved_files); */

/* OMITTED: CXTranslationUnit clang_createTranslationUnit (CXIndex CIdx, const char * ast_filename); */

/* OMITTED: enum CXErrorCode  clang_createTranslationUnit2 (CXIndex CIdx, const char * ast_filename, CXTranslationUnit * out_TU); */

/* OMITTED: unsigned          clang_defaultEditingTranslationUnitOptions (void); */

/* OMITTED: enum CXErrorCode  clang_parseTranslationUnit2FullArgv (CXIndex CIdx, const char * source_filename, const char * const * command_line_args, int num_command_line_args, struct CXUnsavedFile * unsaved_files, unsigned num_unsaved_files, unsigned options, CXTranslationUnit * out_TU); */

/* OMITTED: unsigned          clang_defaultSaveOptions (CXTranslationUnit TU); */

/* OMITTED: int               clang_saveTranslationUnit (CXTranslationUnit TU, const char * FileName, unsigned options); */

/* OMITTED: unsigned          clang_suspendTranslationUnit (CXTranslationUnit TU); */

/* OMITTED: unsigned          clang_defaultReparseOptions (CXTranslationUnit TU); */

/* OMITTED: int               clang_reparseTranslationUnit (CXTranslationUnit TU, unsigned num_unsaved_files, struct CXUnsavedFile * unsaved_files, unsigned options); */

/* OMITTED: const char *      clang_getTUResourceUsageName (enum CXTUResourceUsageKind kind); */

/* OMITTED: CXTUResourceUsage clang_getCXTUResourceUsage (CXTranslationUnit TU); */

/* OMITTED: void              clang_disposeCXTUResourceUsage (CXTUResourceUsage usage); */

static inline void wrap_TargetInfo_getTriple(CXTargetInfo Info, CXString * result) {
  *result = clang_TargetInfo_getTriple(Info);
}
static inline void wrap_getTranslationUnitCursor(CXTranslationUnit TU, CXCursor * result) {
  *result = clang_getTranslationUnitCursor(TU);
}
/* OMITTED: enum CXLanguageKind     clang_getCursorLanguage (CXCursor cursor); */

static inline enum CXTLSKind wrap_getCursorTLSKind(const CXCursor * cursor) {
  return clang_getCursorTLSKind(*cursor);
}
static inline CXTranslationUnit wrap_Cursor_getTranslationUnit(const CXCursor * cursor) {
  return clang_Cursor_getTranslationUnit(*cursor);
}
/* *** Mapping between cursors and source code  *** */

/* <https://clang.llvm.org/doxygen/group__CINDEX__CURSOR__SOURCE.html> */

/* OMITTED: CXCursor         clang_getCursor (CXTranslationUnit TU, CXSourceLocation Source); */

static inline void wrap_getCursorLocation(const CXCursor * cursor, CXSourceLocation * result) {
  *result = clang_getCursorLocation(*cursor);
}
static inline void wrap_getCursorExtent(const CXCursor * cursor, CXSourceRange * result) {
  *result = clang_getCursorExtent(*cursor);
}