src/Clang/LowLevel/FFI.hs

{-| this module is autogenerated with cabal run clang-bootstrap -}
module Clang.LowLevel.FFI (module Clang.LowLevel.FFI) where

import Clang.Enum.Bitfield
import Clang.Enum.Simple
import Clang.Internal.ByValue
import Clang.Internal.ConstPtr
import Clang.LowLevel.Core.Enums
import Clang.LowLevel.Core.Pointers
import Clang.LowLevel.Core.Structs
import Foreign.C.String
import Foreign.C.Types
import Foreign.Ptr

{-------------------------------------------------------------------------------
  Top-level
-------------------------------------------------------------------------------}

foreign import capi unsafe "clang-c/Index.h clang_createIndex"
  nowrapper_clang_createIndex ::
       CInt -- ^ @excludeDeclarationsFromPCH@
    -> CInt -- ^ @displayDiagnostics@
    -> IO CXIndex

foreign import capi unsafe "clang-c/Index.h clang_disposeIndex"
  nowrapper_disposeIndex :: CXIndex -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_getNumDiagnostics"
  nowrapper_getNumDiagnostics :: CXTranslationUnit -> IO CUInt

foreign import capi unsafe "clang-c/Index.h clang_getDiagnostic"
  nowrapper_getDiagnostic ::
       CXTranslationUnit -- ^ the translation unit to query.
    -> CUInt             -- ^ the zero-based diagnostic number to retrieve.
    -> IO CXDiagnostic

{-------------------------------------------------------------------------------
  Diagnostics reporting
-------------------------------------------------------------------------------}

foreign import capi unsafe "clang-c/Index.h clang_getNumDiagnosticsInSet"
  nowrapper_getNumDiagnosticsInSet :: CXDiagnosticSet -> IO CUInt

foreign import capi unsafe "clang-c/Index.h clang_getDiagnosticInSet"
  nowrapper_getDiagnosticInSet ::
       CXDiagnosticSet  -- ^ the CXDiagnosticSet to query.
    -> CUInt            -- ^ the zero-based diagnostic number to retrieve.
    -> IO CXDiagnostic

foreign import capi unsafe "clang-c/Index.h clang_disposeDiagnosticSet"
  nowrapper_disposeDiagnosticSet :: CXDiagnosticSet -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_getChildDiagnostics"
  nowrapper_getChildDiagnostics :: CXDiagnostic -> IO CXDiagnosticSet

foreign import capi unsafe "clang-c/Index.h clang_disposeDiagnostic"
  nowrapper_disposeDiagnostic :: CXDiagnostic -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_formatDiagnostic"
  wrap_formatDiagnostic ::
       CXDiagnostic
    -> BitfieldEnum CXDiagnosticDisplayOptions
    -> W CXString_
    -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_defaultDiagnosticDisplayOptions"
  nowrapper_defaultDiagnosticDisplayOptions ::
       IO (BitfieldEnum CXDiagnosticDisplayOptions)

foreign import capi unsafe "clang-c/Index.h clang_getDiagnosticSeverity"
  nowrapper_getDiagnosticSeverity ::
       CXDiagnostic
    -> IO (SimpleEnum CXDiagnosticSeverity)

foreign import capi unsafe "clang_wrappers.h wrap_getDiagnosticLocation"
  wrap_getDiagnosticLocation :: CXDiagnostic -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getDiagnosticSpelling"
  wrap_getDiagnosticSpelling :: CXDiagnostic -> W CXString_ -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getDiagnosticOption"
  wrap_getDiagnosticOption ::
        CXDiagnostic
     -> W CXString_
     -> W CXString_
     -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_getDiagnosticCategory"
  nowrapper_getDiagnosticCategory :: CXDiagnostic -> IO CUInt

foreign import capi unsafe "clang_wrappers.h wrap_getDiagnosticCategoryText"
  wrap_getDiagnosticCategoryText :: CXDiagnostic -> W CXString_ -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_getDiagnosticNumRanges"
  nowrapper_getDiagnosticNumRanges :: CXDiagnostic -> IO CUInt

foreign import capi unsafe "clang_wrappers.h wrap_getDiagnosticRange"
  wrap_getDiagnosticRange :: CXDiagnostic -> CUInt -> W CXSourceRange_ -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_getDiagnosticNumFixIts"
  nowrapper_getDiagnosticNumFixIts :: CXDiagnostic -> IO CUInt

foreign import capi unsafe "clang_wrappers.h wrap_getDiagnosticFixIt"
  wrap_getDiagnosticFixIt ::
       CXDiagnostic
    -> CUInt
    -> W CXSourceRange_
    -> W CXString_
    -> IO ()

{-------------------------------------------------------------------------------
  Physical source locations
-------------------------------------------------------------------------------}

foreign import capi unsafe "clang_wrappers.h wrap_getRangeStart"
  wrap_getRangeStart :: R CXSourceRange_ -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getRangeEnd"
  wrap_getRangeEnd :: R CXSourceRange_ -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_Range_isNull"
  wrap_Range_isNull :: R CXSourceRange_ -> IO CInt

foreign import capi unsafe "clang_wrappers.h wrap_getExpansionLocation"
  wrap_getExpansionLocation ::
       R CXSourceLocation_
       -- ^ the location within a source file that will be decomposed into its
       -- parts.
    -> Ptr CXFile
       -- ^ [out] if non-NULL, will be set to the file to which the given source
       -- location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the line to which the given source
       -- location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the column to which the given
       -- source location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the offset into the buffer to
       -- which the given source location points.
    -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getPresumedLocation"
  wrap_getPresumedLocation ::
       R CXSourceLocation_
       -- ^ the location within a source file that will be decomposed into its
       -- parts.
    -> W CXString_
       -- ^ [out] if non-NULL, will be set to the filename of the source
       -- location.
       --
       -- Note that filenames returned will be for "virtual" files, which don't
       -- necessarily exist on the machine running clang - e.g. when parsing
       -- preprocessed output obtained from a different environment. If a
       -- non-NULL value is passed in, remember to dispose of the returned value
       -- using clang_disposeString() once you've finished with it. For an
       -- invalid source location, an empty string is returned.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the line number of the source
       -- location. For an invalid source location, zero is returned.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the column number of the source
       -- location. For an invalid source location, zero is returned.
    -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getSpellingLocation"
  wrap_getSpellingLocation ::
       R CXSourceLocation_
       -- ^ the location within a source file that will be decomposed into its
       -- parts.
    -> Ptr CXFile
       -- ^ [out] if non-NULL, will be set to the file to which the given source
       -- location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the line to which the given source
       -- location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the column to which the given
       -- source location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the offset into the buffer to
       -- which the given source location points.
    -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getFileLocation"
  wrap_getFileLocation ::
       R CXSourceLocation_
       -- ^ the location within a source file that will be decomposed into its
       -- parts.
    -> Ptr CXFile
       -- ^ [out] if non-NULL, will be set to the file to which the given source
       -- location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the line to which the given source
       -- location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the column to which the given
       -- source location points.
    -> Ptr CUInt
       -- ^ [out] if non-NULL, will be set to the offset into the buffer to
       -- which the given source location points.
    -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getLocation"
  wrap_getLocation ::
       CXTranslationUnit
    -> CXFile
    -> CUInt
    -> CUInt
    -> W CXSourceLocation_
    -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getRange"
  wrap_getRange ::
       R CXSourceLocation_
    -> R CXSourceLocation_
    -> W CXSourceRange_
    -> IO ()

foreign import capi unsafe "clang-c/Index.h clang_getFile"
  nowrapper_getFile :: CXTranslationUnit -> CString -> IO CXFile

foreign import capi "clang_wrappers.h wrap_Location_isFromMainFile"
  wrap_Location_isFromMainFile :: R CXSourceLocation_ -> IO CInt

{-------------------------------------------------------------------------------
  String manipulation routines
-------------------------------------------------------------------------------}

foreign import capi unsafe "clang_wrappers.h wrap_getCString"
  wrap_getCString :: R CXString_ -> IO CString

foreign import capi unsafe "clang_wrappers.h wrap_disposeString"
  wrap_disposeString :: R CXString_ -> IO ()

{-------------------------------------------------------------------------------
  Translation unit manipulation
-------------------------------------------------------------------------------}

-- We use @ccall@ rather than @capi@ to avoid problems with the
-- @const char *const *@ type
-- (see also <https://gitlab.haskell.org/ghc/ghc/-/issues/22043>).
foreign import ccall unsafe "clang-c/Index.h clang_parseTranslationUnit"
  nowrapper_parseTranslationUnit ::
       CXIndex
    -> CString
    -> Ptr CString
    -> CInt
    -> Ptr CXUnsavedFile
    -> CUInt
    -> BitfieldEnum CXTranslationUnit_Flags
    -> IO CXTranslationUnit

foreign import ccall unsafe "clang-c/Index.h clang_parseTranslationUnit2"
  nowrapper_parseTranslationUnit2 ::
       CXIndex
    -> CString
    -> Ptr CString
    -> CInt
    -> Ptr CXUnsavedFile
    -> CUInt
    -> BitfieldEnum CXTranslationUnit_Flags
    -> Ptr CXTranslationUnit
    -> IO (SimpleEnum (Maybe CXErrorCode))

foreign import capi "clang-c/Index.h clang_disposeTranslationUnit"
  nowrapper_disposeTranslationUnit :: CXTranslationUnit -> IO ()

foreign import capi "clang_wrappers.h clang_getTranslationUnitTargetInfo"
  nowrapper_getTranslationUnitTargetInfo :: CXTranslationUnit -> IO CXTargetInfo

foreign import capi "clang_wrappers.h clang_TargetInfo_dispose"
  nowrapper_TargetInfo_dispose :: CXTargetInfo -> IO ()

foreign import capi "clang_wrappers.h wrap_TargetInfo_getTriple"
  wrap_TargetInfo_getTriple :: CXTargetInfo -> W CXString_ -> IO ()

{-------------------------------------------------------------------------------
  Cursor manipulations
-------------------------------------------------------------------------------}

foreign import capi unsafe "clang_wrappers.h wrap_getTranslationUnitCursor"
  wrap_getTranslationUnitCursor :: CXTranslationUnit -> W CXCursor_ -> IO ()

foreign import capi unsafe "wrap_Cursor_getTranslationUnit"
  wrap_Cursor_getTranslationUnit :: R CXCursor_ -> IO CXTranslationUnit

foreign import capi unsafe "wrap_getCursorTLSKind"
  wrap_getCursorTLSKind :: R CXCursor_ -> IO (SimpleEnum CXTLSKind)

{-------------------------------------------------------------------------------
  Mapping between cursors and source code
-------------------------------------------------------------------------------}

foreign import capi unsafe "clang_wrappers.h wrap_getCursorLocation"
  wrap_getCursorLocation :: R CXCursor_ -> W CXSourceLocation_ -> IO ()

foreign import capi unsafe "clang_wrappers.h wrap_getCursorExtent"
  wrap_getCursorExtent :: R CXCursor_ -> W CXSourceRange_ -> IO ()
